deploy/skiwebapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiwebapi
  labels:
    app: skiwebapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skiwebapi
  template:
    metadata:
      labels:
        app: skiwebapi
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: gcloud-key
      containers:
      - name: skiwebapi-preview
        image: gcr.io/jasondel-test-project/skiwebapi:v3.1.11
        imagePullPolicy: Always
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google           
        ports:
        - containerPort: 8080
