deploy/skijobs.yaml
apiVersion: v1
kind: Service
metadata:
  name: skijobs-service
spec:
  selector:
    app: skijobs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skijobs
  labels:
    app: skijobs
    aadpodidbinding: skijobs-podid        # why do I need this in both places?
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skijobs
  template:
    metadata:
      labels:
        app: skijobs
        aadpodidbinding: skijobs-podid        # why do I need this in both places?
    spec:
      containers:
      - name: skijobsapi
        image: jasondelacr.azurecr.io/skijobsapi:v20191125.1
        ports:
        - containerPort: 80
