deploy/skiwebapiservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: skiwebapi-service
spec:
  selector:
    app: skiwebapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
